Settings People Revamp: Add Manage Synced Data row to Sync Page.

Screenshot showing change: http://imgur.com/6G7vBm2

BUG=617186, 563721
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2073543002
Cr-Commit-Position: refs/heads/master@{#400056}

Former-commit-id: f7fe4c39b2d571dc313ecd4bf57033c7783c6b7a